[gd_scene load_steps=2 format=2]

[ext_resource path="res://lobby.gd" type="Script" id=1]

[node name="lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 2
size_flags_vertical = 2
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="players" type="Panel" parent="."]
visible = false
margin_left = 393.0
margin_top = 113.0
margin_right = 645.0
margin_bottom = 468.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="lobby_label" type="Label" parent="players"]
margin_left = 26.0
margin_top = 18.0
margin_right = 72.0
margin_bottom = 32.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Lobby:"

[node name="lobby" type="LineEdit" parent="players"]
margin_left = 80.0
margin_top = 12.0
margin_right = 228.0
margin_bottom = 36.0
size_flags_horizontal = 2
size_flags_vertical = 0
editable = false

[node name="label" type="Label" parent="players"]
margin_left = 26.0
margin_top = 40.0
margin_right = 142.0
margin_bottom = 54.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Awaiting Players..."

[node name="start" type="Button" parent="players"]
margin_left = 68.0
margin_top = 307.0
margin_right = 193.0
margin_bottom = 336.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "START!"

[node name="list" type="ItemList" parent="players"]
margin_left = 25.0
margin_top = 60.0
margin_right = 229.0
margin_bottom = 296.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="connect" type="Panel" parent="."]
margin_left = 370.0
margin_top = 157.0
margin_right = 647.0
margin_bottom = 357.0
size_flags_horizontal = 2
size_flags_vertical = 2

[node name="name_label" type="Label" parent="connect"]
margin_left = 14.0
margin_top = 11.0
margin_right = 56.0
margin_bottom = 25.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Name:"

[node name="name" type="LineEdit" parent="connect"]
margin_left = 17.0
margin_top = 30.0
margin_right = 173.0
margin_bottom = 54.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "The Warrior"

[node name="ip_label" type="Label" parent="connect"]
margin_left = 15.0
margin_top = 66.0
margin_right = 119.0
margin_bottom = 80.0
size_flags_horizontal = 2
size_flags_vertical = 0
text = "Signaling Server:"

[node name="ip" type="LineEdit" parent="connect"]
margin_left = 17.0
margin_top = 85.0
margin_right = 173.0
margin_bottom = 109.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "ws://localhost:9080"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="host" type="Button" parent="connect"]
margin_left = 181.0
margin_top = 31.0
margin_right = 246.0
margin_bottom = 51.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Host"

[node name="join" type="Button" parent="connect"]
margin_left = 181.0
margin_top = 87.0
margin_right = 246.0
margin_bottom = 107.0
size_flags_horizontal = 2
size_flags_vertical = 2
text = "Join"

[node name="error_label" type="Label" parent="connect"]
margin_left = 15.0
margin_top = 170.0
margin_right = 257.0
margin_bottom = 184.0
size_flags_horizontal = 2
size_flags_vertical = 0
custom_colors/font_color = Color( 0.820312, 0.291595, 0.291595, 1 )
align = 1

[node name="lobby" type="LineEdit" parent="connect"]
margin_left = 17.0
margin_top = 125.0
margin_right = 173.0
margin_bottom = 149.0
size_flags_horizontal = 2
size_flags_vertical = 2
placeholder_text = "Lobby secret"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="server" type="Button" parent="connect"]
margin_left = 181.0
margin_top = 125.0
margin_right = 246.0
margin_bottom = 145.0
size_flags_horizontal = 2
size_flags_vertical = 2
toggle_mode = true
text = "Listen"
__meta__ = {
"_edit_use_anchors_": true
}

[node name="error" type="AcceptDialog" parent="."]
margin_right = 55.0
margin_bottom = 58.0
size_flags_horizontal = 2
size_flags_vertical = 2
[connection signal="pressed" from="players/start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="connect/host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="connect/join" to="." method="_on_join_pressed"]
[connection signal="toggled" from="connect/server" to="." method="_on_server_toggled"]
